--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
 
   <nav class="nav">
     <ul class="nav__list">
-      <li><a href="#">Горшки для растений</a></li>
+      <li><a href="#">Горшки&nbsp;для&nbsp;растений</a></li>
       <li><a href="#">Керамика</a></li>
       <li><a href="#">Столы</a></li>
       <li><a href="#">Стулья</a></li>
-      <li><a href="#">Кухонная утварь</a></li>
+      <li><a href="#">Кухонная&nbsp;утварь</a></li>
       <li><a href="#">Посуда</a></li>
-      <li><a href="#">Столовые приборы</a></li>
+      <li><a href="#">Столовые&nbsp;приборы</a></li>
     </ul>
   </nav>
 </header>
@@ -226,7 +226,7 @@
         <li><a href="#">О нас</a></li>
         <li><a href="#">Вакансии</a></li>
         <li><a href="#">Контакты</a></li>
-        <li><a href="#">Политика конфиденциальности</a></li>
+        <li><a href="#">Политика&nbsp;конфиденциальности</a></li>
         <li><a href="#">Возврат товара</a></li>
       </ul>
     </div>
