--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
       </article>
 
       <article class="card">
-        <img src="assets/img/chair.png">
+        <img src="assets/img/Chair.png">
         <h3>The Dandy chair</h3>
         <p>£980</p>
       </article>
