feature add burger menu and phone UI adaptation

--- a/index.html
+++ b/index.html
@@ -24,12 +24,17 @@
     <div class="header__icons">
       <img src="assets/icons/Shopping--cart.png" alt="Shopping--cart">
       <img src="assets/icons/User--avatar.png" alt="Account">
+      <button class="burger" id="burger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
     </div>
   </div>
 
   <hr class="header__line">
 
-  <nav class="nav">
+  <nav class="nav" id="nav">
     <ul class="nav__list">
       <li><a href="#">Горшки&nbsp;для&nbsp;растений</a></li>
       <li><a href="#">Керамика</a></li>
@@ -254,6 +259,10 @@
   </div>
 
 </footer>
+
+<button class="scroll-top" id="scrollTopBtn">↑</button>
+<script src="./assets/scripts/BurgerMenu.js" defer></script>
+<script src="./assets/scripts/ScrollToTop.js" defer></script>
 
 </body>
 </html>
